# new-maintenance-logger

./: .docker-compose.yml.swp  .dockerignore  .gitignore  Dockerfile  README.md  client-requirements.txt  client.py  client.spec  create-exe.bat  docker-compose.yml  gen-csr.sh  main.py  maintenance_logs.db  mlog-server-nginx.conf  mlog-server.service  nginx-https.conf  nginx.conf  openssl.cnf  pyproject.toml  requirements.txt  server-requirements.txt  sign-cert.sh
.claude/: settings.local.json
client-depends/: pyinstaller-6.14.2-py3-none-win_amd64.whl  pyinstaller_hooks_contrib-2025.8-py3-none-any.whl
templates/: logs.html
