[project]
name = "new-maintenance-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pytz==2025.2",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uvicorn==0.35.0",
]
